parse editor content and display result on console

--- a/web/index.html
+++ b/web/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>title</title>
+    <title>Parlay Test Page</title>
     <!-- link rel="stylesheet" href="style.css" -->
     <script src="index.js"></script>
   </head>
-  <body id="main">
+  <body>
     Hey there!
+    <div id="parlay-editor"/>
     <!-- page content -->
   </body>
 </html>
