--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Parlay Test Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <link rel="stylesheet" href="index.css">    
     <!-- link rel="stylesheet" href="style.css" -->
     <script src="index.js"></script>
   </head>
