--- a/web/index.html
+++ b/web/index.html
@@ -8,8 +8,8 @@
     <!-- link rel="stylesheet" href="style.css" -->
     <script src="index.js"></script>
   </head>
-  <body>
-    Hey there!
+  <body class="solarized-light">
+    <h1 style="margin: 10px">Parlay Test Page</h1>
     <div id="parlay-editor"/>
     <!-- page content -->
   </body>
