--- a/web/index.html
+++ b/web/index.html
@@ -8,8 +8,12 @@
     <!-- link rel="stylesheet" href="style.css" -->
     <script src="index.js"></script>
   </head>
-  <body class="solarized-light">
+  <body class="solarized-light parlay-body">
     <h1 style="margin: 10px">Parlay Test Page</h1>
+    <button id = "cmd-text" class="parlay-button">Text</button>
+    <button id = "cmd-structure" class="parlay-button">Structure</button>
+    <button id = "cmd-light" class="parlay-button">Light</button>
+    <button id = "cmd-dark" class="parlay-button">Dark</button>
     <div id="parlay-editor"/>
     <!-- page content -->
   </body>
