Base theory axioms as example.

--- a/web/index.html
+++ b/web/index.html
@@ -10,11 +10,12 @@
   </head>
   <body class="solarized-light parlay-body">
     <h1 style="margin: 10px">Parlay Test Page</h1>
+    <button id = "cmd-plain" class="parlay-button">Plain</button>
     <button id = "cmd-text" class="parlay-button">Text</button>
     <button id = "cmd-structure" class="parlay-button">Structure</button>
     <button id = "cmd-light" class="parlay-button">Light</button>
     <button id = "cmd-dark" class="parlay-button">Dark</button>
-    <div id="parlay-editor"/>
+    <div id="parlay-editor"></div>
     <!-- page content -->
   </body>
 </html>
