--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,10 @@
     <button id = "cmd-structure" class="parlay-button">Structure</button>
     <button id = "cmd-light" class="parlay-button">Light</button>
     <button id = "cmd-dark" class="parlay-button">Dark</button>
+    <div>
     <div id="parlay-editor"></div>
+    <div id="parlay-debug"></div>
+    </div>
     <!-- page content -->
   </body>
 </html>
