--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@
     <button id = "cmd-light" class="parlay-button">Light</button>
     <button id = "cmd-dark" class="parlay-button">Dark</button>
     <div>
+    <div id="colorscheme-viewer" class="gruvbox-light"/>
     <div id="parlay-editor"></div>
     <div id="parlay-debug"></div>
     </div>
