Working on Compound

--- a/web/index.html
+++ b/web/index.html
@@ -15,10 +15,14 @@
     <button id = "cmd-structure" class="parlay-button">Structure</button>
     <button id = "cmd-light" class="parlay-button">Light</button>
     <button id = "cmd-dark" class="parlay-button">Dark</button>
-    <div>
-    <div id="colorscheme-viewer" class="gruvbox-light"/>
+    <button id = "cmd-abort" class="parlay-abort">Abort</button>
+    <button id = "cmd-complete" class="parlay-complete">Complete</button>
+    <div id="compound" contenteditable="true" class="compound"></div>
+    <div id="compound-mirror" contenteditable="true" class="compound"></div>
+    <div>  
     <div id="parlay-editor"></div>
     <div id="parlay-debug"></div>
+    <div id="colorscheme-viewer" class="gruvbox-light"></div>  
     </div>
     <!-- page content -->
   </body>
