Working on Replica.

--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,12 @@
   </head>
   <body class="solarized-light parlay-body">
     <h1 style="margin: 10px">Parlay Test Page</h1>
+    <svg id="d3demo1" width="600" height="300" style="background: lightgrey;"/>
+    <hr>
+    <div id="demo2"></div>
+    <hr>  
+    <div id="crdt"></div> 
+    <hr>
     <button id = "cmd-plain" class="parlay-button">Plain</button>
     <button id = "cmd-text" class="parlay-button">Text</button>
     <button id = "cmd-structure" class="parlay-button">Structure</button>
